# MuVI

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  citation.bib  codecov.yml  log.conf  pyproject.toml
.github/workflows/: build.yml
docs/: conf.py  index.rst
docs/_api/: modules.rst  muvi.core.rst  muvi.rst  muvi.tools.rst
examples/: 1_basic_tutorial.ipynb  2_single-cell_rna-seq.ipynb  3_single-cell_multi-omics_integration.ipynb  3_single-cell_multi-omics_integration_nmf.ipynb  3a_single-cell_multi-omics_integration.ipynb  3b_single-cell_multi-omics_integration.ipynb  3c_single-cell_multi-omics_integration_nmf.ipynb  4_single-cell_multi-omics_integration_R.Rmd  5_bulk_multi-omics_integration.ipynb  basic_tutorial.ipynb  kang_evaluation.ipynb  mesc_evaluation.ipynb  perturbase_THP-1.ipynb  single-cell_multi-omics_integration.ipynb
msigdb/: c2.cp.reactome.v7.5.1.symbols.gmt  c5.go.cc.v7.5.1.symbols.gmt  c8.all.v7.5.1.symbols.gmt
muvi/: __init__.py  callbacks.py  models.py  plotting.py
muvi/core/: __init__.py  callbacks.py  early_stopping.py  gpu.py  index.py  misc.py  models.py  synthetic.py
muvi/tools/: __init__.py  cache.py  config.py  external.py  feature_sets.py  pathways.py  plotting.py  utils.py
spexlvm/: callbacks.py  config.py  data.py  models.py  plotting.py  utils.py
test/: conftest.py  test_data.py
tests/: conftest.py  test_alternative_input.py  test_callbacks.py  test_feature_sets.py  test_from_other_data.py  test_get_free_gpu.py  test_index.py  test_input.py  test_models.py  test_muvi_model.py  test_normalize.py  test_prior.py  test_save_load.py  test_synthetic.py  test_tools.py  test_train.py
