[tool.poetry]
name = "muvi"
version = "0.2.0"
description = "MuVI: A multi-view latent variable model with domain-informed structured sparsity for integrating noisy feature sets."
readme = "README.md"
authors = ["Arber Qoku <arber.qoku@dkfz-heidelberg.com>"]
homepage = "https://github.com/MLO-lab/MuVI"
repository = "https://github.com/MLO-lab/MuVI"
keywords = ["multi-view", "multi-omics", "feature sets", "latent variable model", "structured sparsity", "variational inference", "single-cell"]


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
scanpy = "^1.10.4"
mudata = "^0.3.1"
igraph = "^0.11.8"
leidenalg = "^0.10.2"
dill = "^0.3.9"
tqdm = "^4.67.1"
tabulate = "^0.9.0"
torch = ">=2.5.1,<2.6.0"
pyro-ppl = "^1.9.1"
tensordict = "^0.6.2"
kneed = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "2.20.0"
jupyter = "^1.0.0"
ipython = "^8.10.0"
twine = "^5.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.0"

[tool.poetry.group.lint.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = ">=1.6.0"


[tool.ruff]
fix = true
unfixable = [
    "ERA", # do not autoremove commented out code
]
target-version = "py39"
line-length = 88
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "B904", # use 'raise ... from err'
    "B905", # use explicit 'strict=' parameter with 'zip()'
    "N818", #  Exception name should be named with an Error suffix
]
extend-exclude = [
    "docs/*",
    "tests/*",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["muvi"]

[tool.black]
target-version = ["py39"]
preview = true


[tool.mypy]
files = "muvi, tests"
mypy_path = "muvi"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover"
]
omit = [
    "**/tests/*",
    "**/muvi/tools/plotting.py",
    "**/muvi/tools/external.py"
]